# haskell-intro-session

./: .ghci  .gitignore  README.md  haskell-intro-session.cabal  stack.yaml
answersrc/: FunnyMath.hs  Main.hs  Tutorial.hs
slides/: Makefile  default.beamer  lightning.md
src/: FunnyMath.hs  Main.hs  Tutorial.hs
test/: FunnyMathSpec.hs  doctests.hs
