name:                haskell-intro-session
version:             0.1.0.1
synopsis:            Pittsburgh Haskell intro session
description:         Pittsburgh Haskell intro session slides and tutorial code
homepage:            https://github.com/pittsburgh-haskell/haskell-intro-session
license:             BSD3
license-file:        LICENSE
author:              Franklin Chen
maintainer:          franklinchen@franklinchen.com
copyright:           Franklin Chen
category:            Game
build-type:          Simple
extra-source-files:  README.md
                   , slides/Makefile
                   , slides/default.beamer
                   , slides/lightning.md
                   , slides/lightning.pdf
cabal-version:       >=1.10

executable game
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base <= 5
                   , random
                   , haskell-intro-session

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:   Tutorial
                   , FunnyMath
                   , Main
  build-depends:     base <= 5
                   , random

test-suite doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -threaded -Wall
  hs-source-dirs:    test
  main-is:           doctests.hs
  build-depends:     base <= 5
                   , doctest
                   , random
                   , haskell-intro-session

test-suite spec
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base <= 5
                   , hspec
                   , haskell-intro-session

source-repository head
  type:              git
  location:          https://github.com/pittsburgh-haskell/haskell-intro-session
